<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@drawable/gradiantbackground"
    android:onClick="buttonClick"
    tools:context=".Home">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#C54D4D"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D55D5D">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#CF75CF">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="2dp"
                        android:backgroundTint="#E67F7F"
                        android:text="Home"
                        android:textColor="#131212"
                        android:textSize="42sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/Gm"
                        android:textAlignment="center"
                        android:textColor="#100D0D"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="300dp"
                        android:layout_marginTop="28dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/lina" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="428dp"
            android:layout_height="734dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <Button
                            android:id="@+id/button6"
                            android:layout_width="269dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:backgroundTint="#D5CB77"

                            android:text="@string/Find"
                            android:textColorHighlight="#150D0D"
                            android:textColorHint="#1B1818"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="114dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/find" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#C33CDA">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent">

                        <Button
                            android:id="@+id/button9"
                            android:layout_width="400dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:backgroundTint="#D5CB77"
                            android:text="@string/Meditation"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageView14"
                            android:layout_width="122dp"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/online_chat" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="256dp"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/acme"
                        android:text="@string/articles"
                        android:textColor="#E6CBCB"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="400dp"
                        android:layout_height="216dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="15dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="169dp"
                            android:layout_height="149dp"
                            android:layout_marginStart="36dp"
                            android:layout_marginTop="46dp"
                            android:layout_marginBottom="50dp"
                            app:srcCompat="@drawable/card2" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="157dp"
                            android:layout_height="149dp"
                            android:layout_marginStart="36dp"
                            android:layout_marginTop="46dp"
                            android:layout_marginBottom="50dp"
                            app:srcCompat="@drawable/card" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="421dp"
        android:layout_height="80dp"
        android:background="#252222"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:padding="15dp"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:padding="15dp"
                app:srcCompat="@drawable/consult" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:padding="15dp"
                app:srcCompat="@drawable/sleep" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:padding="15dp"
                app:srcCompat="@drawable/prof" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>